# Sudoko

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
src/board/: board.py
src/generate/: generate.py
src/solve/: solve.py
tests/generate/: test_generate.py
tests/solve/: test_solve.py
